[gd_scene load_steps=4 format=3 uid="uid://c6bh8cnku4mfv"]

[ext_resource type="Script" path="res://scripts/ui/right_click_menu.gd" id="1_xhm4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56gmm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efobu"]
bg_color = Color(4.36185e-08, 0.128402, 0.0366187, 1)

[node name="RightClickMenu" type="PanelContainer"]
z_index = 2
offset_right = 120.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_56gmm")
script = ExtResource("1_xhm4i")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(110, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_efobu")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DropButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Drop"

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/DropButton" to="." method="_on_drop_button_pressed"]
